# invoices-rs

./: .env  .gitignore  Cargo.toml  Makefile  README.md  package-lock.json  package.json
migrations/: 20230928140800_client.sql
src/: controllers.rs  database.rs  error.rs  main.rs  models.rs  routes.rs  templates.rs
src/controllers/: clients.rs  schemas.rs  statics.rs
src/services/: clients.rs
src/templates/: clients.rs  common.rs
templates/: base.html  error.html  index.html  navbar.html
templates/clients/: base.html
templates/clients/components/: list.html
templates/clients/forms/: client.html
templates/clients/views/: create.html  edit.html  list.html
templates/components/: message.html
web/: app.js
web/assets/forms/: clients.js
