[package]
name = "invoice-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
askama = {version = "0.12.1", features = ["with-axum"]}
askama_axum = "0.3.0"
axum = "0.6.20"
axum-macros = "0.3.8"
axum-template = { version = "1.0.0", features = ["minijinja"] }
lazy_static = "1.4.0"
serde = { version = "1.0.188", "features" = ["derive"] }
serde_json = "1.0.107"
sqlx = { version = "0.7.2", features = ["runtime-tokio-native-tls", "json", "sqlite", "uuid"] }
tokio = { version = "1.32.0", features = ["full"] }
tower-http = "0.4.4"
uuid = { version = "1.4.1", features = ["v4", "fast-rng"] }
